rnsc/test_data/rns_integration/error/parser/type_hints/utf8/trailing_token_recovers.rns
.class @utf8 debug_info unexpected_second_operand
.super java/lang/Object
